# aion_miner

./: README.md
aion_reference_miner/: CMakeLists.txt
aion_reference_miner/aionminer/: AvailableSolvers.h  ISolver.h  MinerFactory.cpp  MinerFactory.h  main.cpp
aion_reference_miner/cmake/: FindOpenCL.cmake
aion_reference_miner/opencl_solver/: CMakeLists.txt  _kernel.h.in  blake2b.cpp  blake2b.h  opencl_solver.cpp  opencl_solver.h  opencl_solver.hpp
